--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,9 @@ dmypy.json
 
 # Project-specific
 .connection_cache.json
+.chat_history/
 .chat_history.json
+.chat_backup/
 .chat_backups/
 .chat_history_old/
 *.wav
